# Nebula

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
engine/: CMakeLists.txt
engine/include/nebula/: assets.h  audio.h  core.h  debug.h  ecs.h  events.h  fx.h  gfx.h  math.h  nebula.h  physics.h  renderer.h  scene.h  ui.h
engine/include/nebula/assets/: AssetManager.h
engine/include/nebula/audio/: AudioClip.h  AudioManager.h
engine/include/nebula/core/: Application.h  Input.h  KeyCodes.h  Window.h
engine/include/nebula/debug/: DebugOverlay.h  DeveloperTools.h
engine/include/nebula/ecs/: ComponentPool.h  Components.h  Entity.h  System.h  World.h
engine/include/nebula/events/: EventBus.h  Events.h  Signal.h
engine/include/nebula/fx/: ParticleSystem.h
engine/include/nebula/gfx/: Framebuffer.h  LightRenderer.h  PostProcessor.h
engine/include/nebula/math/: Camera2D.h
engine/include/nebula/physics/: Physics.h
engine/include/nebula/renderer/: Animator.h  FontRenderer.h  RenderCommand.h  Shader.h  SpriteBatch.h  Texture.h  TextureAtlas.h  Tilemap.h  VertexArray.h
engine/include/nebula/scene/: Scene.h  SceneManager.h
engine/include/nebula/ui/: UILayer.h
engine/src/assets/: AssetManager.cpp
engine/src/audio/: AudioManager.cpp
engine/src/core/: Application.cpp  Input.cpp  Window.cpp
engine/src/debug/: DebugOverlay.cpp  DeveloperTools.cpp
engine/src/fx/: ParticleSystem.cpp
engine/src/gfx/: Framebuffer.cpp  LightRenderer.cpp  PostProcessor.cpp
engine/src/math/: Camera2D.cpp
engine/src/physics/: Physics.cpp
engine/src/renderer/: Animator.cpp  FontRenderer.cpp  RenderCommand.cpp  Shader.cpp  SpriteBatch.cpp  Texture.cpp  TextureAtlas.cpp  Tilemap.cpp  VertexArray.cpp
engine/src/scene/: SceneManager.cpp
engine/src/ui/: UILayer.cpp
game/: CMakeLists.txt
game/assets/atlas/: world.atlas
game/assets/shaders/: font.frag  light.frag  light.vert  screen.frag  screen.vert  sprite.frag  sprite.vert
game/src/: main.cpp
tools/: generate_showcase_assets.py
